--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <img src="images/logo.png" id="logo" alt="">
 
-        <nav><h1 style="color:black;font-size:40px;">SHRI DATT HOSPITAL AND CRITICAL CARE CENTER , PUSAD</h1></nav>
+        <nav><h1 style="color:black;font-size:40px;">SHRI DATT HOSPITAL AND CRITICAL CARE CENTER</h1></nav>
         <div class="icons">
             <div id="menubar" class="fas fa-bars"></div>
             <a href="signup.php">Sign Up</a>
